update with 57 changes

--- a/note/dd.html
+++ b/note/dd.html
@@ -1,6 +1,7 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
 <title>dd - Seorenn</title>
@@ -25,7 +26,6 @@
 <meta property="og:locale" content="ko_KR" />
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
@@ -72,9 +72,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgb75ccd6">SD 카드에서 이미지 덤프하기</a></li>
-<li><a href="#orga6b7cc9">이미지를 SD 카드에 쓰기</a></li>
-<li><a href="#orgee034ba">팁</a></li>
+<li><a href="#org9784bcb">SD 카드에서 이미지 덤프하기</a></li>
+<li><a href="#org082d52a">이미지를 SD 카드에 쓰기</a></li>
+<li><a href="#org81b0e66">팁</a></li>
 </ul>
 </div>
 </div>
@@ -91,9 +91,9 @@ dd는 파일을 변환하거나 복사하는데 사용하는
 Disk Dump의 약자가 아닐까 유추된다.
 </p>
 
-<div id="outline-container-orgb75ccd6" class="outline-2">
-<h2 id="orgb75ccd6">SD 카드에서 이미지 덤프하기</h2>
-<div class="outline-text-2" id="text-orgb75ccd6">
+<div id="outline-container-org9784bcb" class="outline-2">
+<h2 id="org9784bcb">SD 카드에서 이미지 덤프하기</h2>
+<div class="outline-text-2" id="text-org9784bcb">
 <p>
 주로 SD 카드의 내용을 백업할 때 사용한다.
 </p>
@@ -143,9 +143,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-orga6b7cc9" class="outline-2">
-<h2 id="orga6b7cc9">이미지를 SD 카드에 쓰기</h2>
-<div class="outline-text-2" id="text-orga6b7cc9">
+<div id="outline-container-org082d52a" class="outline-2">
+<h2 id="org082d52a">이미지를 SD 카드에 쓰기</h2>
+<div class="outline-text-2" id="text-org082d52a">
 <p>
 백업한 이미지를 이용해 SD 카드나 특정 스토리지에 동일한 내용을 복제하기 위해 사용한다.
 </p>
@@ -167,9 +167,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-orgee034ba" class="outline-2">
-<h2 id="orgee034ba">팁</h2>
-<div class="outline-text-2" id="text-orgee034ba">
+<div id="outline-container-org81b0e66" class="outline-2">
+<h2 id="org81b0e66">팁</h2>
+<div class="outline-text-2" id="text-org81b0e66">
 <p>
 만약 덤프나 이미지 쓰기가 느리다면
 <a href="macos.html">macOS</a>에서는 <code>/dev/diskN</code> 대신 <code>/dev/rdiskN</code> 를 사용해 볼 수도 있다.
