--- a/note/fcpx.html
+++ b/note/fcpx.html
@@ -1,6 +1,7 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
 <title>Final Cut Pro X - Seorenn</title>
@@ -25,7 +26,6 @@
 <meta property="og:locale" content="ko_KR" />
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
@@ -72,12 +72,12 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org4a42682">단축키</a>
+<li><a href="#org093fe0d">단축키</a>
 <ul>
-<li><a href="#org2578472">프로젝트(Project)</a></li>
-<li><a href="#org32cfa5a">클립 브라우저(Clip Browser)</a></li>
-<li><a href="#org3805842">타임라인(Timeline)</a></li>
-<li><a href="#org243a104">플레이(Play or Preview)</a></li>
+<li><a href="#org4b1d481">프로젝트(Project)</a></li>
+<li><a href="#org5c2a1a3">클립 브라우저(Clip Browser)</a></li>
+<li><a href="#org0134049">타임라인(Timeline)</a></li>
+<li><a href="#orgc36e30a">플레이(Play or Preview)</a></li>
 </ul>
 </li>
 </ul>
@@ -89,13 +89,13 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 자매 소프트웨어로 <a href="motion.html">Motion</a>과 Compressor가 있다.
 </p>
 
-<div id="outline-container-org4a42682" class="outline-2">
-<h2 id="org4a42682">단축키</h2>
-<div class="outline-text-2" id="text-org4a42682">
+<div id="outline-container-org093fe0d" class="outline-2">
+<h2 id="org093fe0d">단축키</h2>
+<div class="outline-text-2" id="text-org093fe0d">
 </div>
-<div id="outline-container-org2578472" class="outline-3">
-<h3 id="org2578472">프로젝트(Project)</h3>
-<div class="outline-text-3" id="text-org2578472">
+<div id="outline-container-org4b1d481" class="outline-3">
+<h3 id="org4b1d481">프로젝트(Project)</h3>
+<div class="outline-text-3" id="text-org4b1d481">
 <dl class="org-dl">
 <dt><code>Option N</code></dt><dd>New Event</dd>
 <dt><code>Command N</code></dt><dd>New Project</dd>
@@ -104,9 +104,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org32cfa5a" class="outline-3">
-<h3 id="org32cfa5a">클립 브라우저(Clip Browser)</h3>
-<div class="outline-text-3" id="text-org32cfa5a">
+<div id="outline-container-org5c2a1a3" class="outline-3">
+<h3 id="org5c2a1a3">클립 브라우저(Clip Browser)</h3>
+<div class="outline-text-3" id="text-org5c2a1a3">
 <dl class="org-dl">
 <dt><code>Command +</code></dt><dd>Zoom In</dd>
 <dt><code>Command -</code></dt><dd>Zoom Out</dd>
@@ -121,9 +121,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org3805842" class="outline-3">
-<h3 id="org3805842">타임라인(Timeline)</h3>
-<div class="outline-text-3" id="text-org3805842">
+<div id="outline-container-org0134049" class="outline-3">
+<h3 id="org0134049">타임라인(Timeline)</h3>
+<div class="outline-text-3" id="text-org0134049">
 <dl class="org-dl">
 <dt><code>Shift Z</code></dt><dd>타임라인 전체가 가득 차게 확대 혹은 축소</dd>
 <dt><code>Command +</code></dt><dd>확대(Zoom In)</dd>
@@ -148,9 +148,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org243a104" class="outline-3">
-<h3 id="org243a104">플레이(Play or Preview)</h3>
-<div class="outline-text-3" id="text-org243a104">
+<div id="outline-container-orgc36e30a" class="outline-3">
+<h3 id="orgc36e30a">플레이(Play or Preview)</h3>
+<div class="outline-text-3" id="text-orgc36e30a">
 <dl class="org-dl">
 <dt><code>Space</code></dt><dd>플레이</dd>
 <dt><code>L</code></dt><dd>플레이 및 속도 증가</dd>
