--- a/note/flake8.html
+++ b/note/flake8.html
@@ -1,6 +1,7 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
 <title>flake8 - Seorenn</title>
@@ -25,7 +26,6 @@
 <meta property="og:locale" content="ko_KR" />
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
@@ -72,11 +72,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd1ff10c">설치</a></li>
-<li><a href="#orgabb8beb">사용법</a></li>
-<li><a href="#org6e4fc83">설정 파일</a></li>
-<li><a href="#org1b62a7f">파일 별로 일부 경고 무시하기</a></li>
-<li><a href="#orga8b1353">외부 링크</a></li>
+<li><a href="#orge26ffde">설치</a></li>
+<li><a href="#orgcd1120b">사용법</a></li>
+<li><a href="#org6ecd19d">설정 파일</a></li>
+<li><a href="#org09cccc0">파일 별로 일부 경고 무시하기</a></li>
+<li><a href="#org45d4117">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -88,9 +88,9 @@ gtag('config', 'UA-44534026-1');
 PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 
-<div id="outline-container-orgd1ff10c" class="outline-2">
-<h2 id="orgd1ff10c">설치</h2>
-<div class="outline-text-2" id="text-orgd1ff10c">
+<div id="outline-container-orge26ffde" class="outline-2">
+<h2 id="orge26ffde">설치</h2>
+<div class="outline-text-2" id="text-orge26ffde">
 <p>
 파이썬 패키지이기 때문에 <a href="pip.html">pip</a>로 그냥 설치할 수 있다.
 </p>
@@ -100,9 +100,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </div>
 </div>
 </div>
-<div id="outline-container-orgabb8beb" class="outline-2">
-<h2 id="orgabb8beb">사용법</h2>
-<div class="outline-text-2" id="text-orgabb8beb">
+<div id="outline-container-orgcd1120b" class="outline-2">
+<h2 id="orgcd1120b">사용법</h2>
+<div class="outline-text-2" id="text-orgcd1120b">
 <p>
 <a href="cli.html">CLI</a>로 그냥 실행시키면 된다.
 </p>
@@ -122,9 +122,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 </div>
 </div>
-<div id="outline-container-org6e4fc83" class="outline-2">
-<h2 id="org6e4fc83">설정 파일</h2>
-<div class="outline-text-2" id="text-org6e4fc83">
+<div id="outline-container-org6ecd19d" class="outline-2">
+<h2 id="org6ecd19d">설정 파일</h2>
+<div class="outline-text-2" id="text-org6ecd19d">
 <p>
 전역 설정 파일은 <code>~/.config/flake8</code> 파일에,
 프로젝트 단위 설정은 프로젝트 루트에 <code>.flake8</code>
@@ -156,9 +156,9 @@ exclude = file_to_exclude.py
 </p>
 </div>
 </div>
-<div id="outline-container-org1b62a7f" class="outline-2">
-<h2 id="org1b62a7f">파일 별로 일부 경고 무시하기</h2>
-<div class="outline-text-2" id="text-org1b62a7f">
+<div id="outline-container-org09cccc0" class="outline-2">
+<h2 id="org09cccc0">파일 별로 일부 경고 무시하기</h2>
+<div class="outline-text-2" id="text-org09cccc0">
 <p>
 커맨드 라인 옵션으로 특정 체크를 무시할 수 있다.
 </p>
@@ -191,9 +191,9 @@ exclude = file_to_exclude.py
 </div>
 </div>
 </div>
-<div id="outline-container-orga8b1353" class="outline-2">
-<h2 id="orga8b1353">외부 링크</h2>
-<div class="outline-text-2" id="text-orga8b1353">
+<div id="outline-container-org45d4117" class="outline-2">
+<h2 id="org45d4117">외부 링크</h2>
+<div class="outline-text-2" id="text-org45d4117">
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/68">🌏파이썬 코드 문법 검사기 flake8</a>: 이 글과
 거의 동일한 내용이다.
