--- a/note/macos.html
+++ b/note/macos.html
@@ -1,6 +1,7 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
 <title>macOS - Seorenn</title>
@@ -25,7 +26,6 @@
 <meta property="og:locale" content="ko_KR" />
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
@@ -72,9 +72,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org5c18b40">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#org8ecbe78">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org92c7178">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org30ab882">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#orgc9815de">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#org7208e16">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -99,17 +99,17 @@ macOS 는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org5c18b40" class="outline-2">
-<h2 id="org5c18b40">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org5c18b40">
+<div id="outline-container-org30ab882" class="outline-2">
+<h2 id="org30ab882">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-org30ab882">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-org8ecbe78" class="outline-2">
-<h2 id="org8ecbe78">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-org8ecbe78">
+<div id="outline-container-orgc9815de" class="outline-2">
+<h2 id="orgc9815de">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-orgc9815de">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -129,9 +129,9 @@ macOS 는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org92c7178" class="outline-2">
-<h2 id="org92c7178">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org92c7178">
+<div id="outline-container-org7208e16" class="outline-2">
+<h2 id="org7208e16">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-org7208e16">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -178,14 +178,14 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <div class="article-link-date">
 2020년 4월 25일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
+<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
 <div class="article-link-date">
 2020년 4월 25일 수정</div>
 </div>
