--- a/note/org-spreadsheet.html
+++ b/note/org-spreadsheet.html
@@ -1,6 +1,7 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
 <title>Org 스프레드시트 - Seorenn</title>
@@ -25,7 +26,6 @@
 <meta property="og:locale" content="ko_KR" />
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
@@ -72,7 +72,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgcb6aa0d">외부 링크</a></li>
+<li><a href="#org34a1a24">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -90,9 +90,9 @@ gtag('config', 'UA-44534026-1');
 글을 참고하자.
 </p>
 
-<div id="outline-container-orgcb6aa0d" class="outline-2">
-<h2 id="orgcb6aa0d">외부 링크</h2>
-<div class="outline-text-2" id="text-orgcb6aa0d">
+<div id="outline-container-org34a1a24" class="outline-2">
+<h2 id="org34a1a24">외부 링크</h2>
+<div class="outline-text-2" id="text-org34a1a24">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html">🌏Org as a spreadsheet system: a short introduction</a></li>
 </ul>
