--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -1,6 +1,7 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
 <title>caffeinate - Seorenn</title>
@@ -25,7 +26,6 @@
 <meta property="og:locale" content="ko_KR" />
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
@@ -72,11 +72,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org6b2e7f0">사용법</a>
+<li><a href="#org76019e5">사용법</a>
 <ul>
-<li><a href="#org46974ce">무제한 잠자기 방지</a></li>
-<li><a href="#org9947b16">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#org757f468">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#org4c131d1">무제한 잠자기 방지</a></li>
+<li><a href="#orgb245260">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#org121bc40">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -87,13 +87,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org6b2e7f0" class="outline-2">
-<h2 id="org6b2e7f0">사용법</h2>
-<div class="outline-text-2" id="text-org6b2e7f0">
+<div id="outline-container-org76019e5" class="outline-2">
+<h2 id="org76019e5">사용법</h2>
+<div class="outline-text-2" id="text-org76019e5">
 </div>
-<div id="outline-container-org46974ce" class="outline-3">
-<h3 id="org46974ce">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org46974ce">
+<div id="outline-container-org4c131d1" class="outline-3">
+<h3 id="org4c131d1">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org4c131d1">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -104,9 +104,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org9947b16" class="outline-3">
-<h3 id="org9947b16">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org9947b16">
+<div id="outline-container-orgb245260" class="outline-3">
+<h3 id="orgb245260">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-orgb245260">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -117,9 +117,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org757f468" class="outline-3">
-<h3 id="org757f468">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org757f468">
+<div id="outline-container-org121bc40" class="outline-3">
+<h3 id="org121bc40">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org121bc40">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
