--- a/note/find.html
+++ b/note/find.html
@@ -1,6 +1,7 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
 <title>find - Seorenn</title>
@@ -25,7 +26,6 @@
 <meta property="og:locale" content="ko_KR" />
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
@@ -72,14 +72,14 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org96cbadc">기본 사용법</a>
+<li><a href="#orgbb4014b">기본 사용법</a>
 <ul>
-<li><a href="#org9e9baab">현재 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#org5c57959">특정 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#orga59fc9c">검색 패턴</a></li>
-<li><a href="#org34c2e68">대소문자 무시하기</a></li>
-<li><a href="#orge26d955">검색 종류 지정하기</a></li>
-<li><a href="#orge31d43d">검색 내용으로 특정 처리하기(exec)</a></li>
+<li><a href="#org3f87743">현재 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#org3d5d593">특정 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#org6bbf7cb">검색 패턴</a></li>
+<li><a href="#org8e443df">대소문자 무시하기</a></li>
+<li><a href="#org47c490c">검색 종류 지정하기</a></li>
+<li><a href="#orga6b5627">검색 내용으로 특정 처리하기(exec)</a></li>
 </ul>
 </li>
 </ul>
@@ -90,13 +90,13 @@ gtag('config', 'UA-44534026-1');
 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org96cbadc" class="outline-2">
-<h2 id="org96cbadc">기본 사용법</h2>
-<div class="outline-text-2" id="text-org96cbadc">
+<div id="outline-container-orgbb4014b" class="outline-2">
+<h2 id="orgbb4014b">기본 사용법</h2>
+<div class="outline-text-2" id="text-orgbb4014b">
 </div>
-<div id="outline-container-org9e9baab" class="outline-3">
-<h3 id="org9e9baab">현재 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-org9e9baab">
+<div id="outline-container-org3f87743" class="outline-3">
+<h3 id="org3f87743">현재 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-org3f87743">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> . -name <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -108,9 +108,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org5c57959" class="outline-3">
-<h3 id="org5c57959">특정 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-org5c57959">
+<div id="outline-container-org3d5d593" class="outline-3">
+<h3 id="org3d5d593">특정 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-org3d5d593">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> /foo/bar <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -120,9 +120,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orga59fc9c" class="outline-3">
-<h3 id="orga59fc9c">검색 패턴</h3>
-<div class="outline-text-3" id="text-orga59fc9c">
+<div id="outline-container-org6bbf7cb" class="outline-3">
+<h3 id="org6bbf7cb">검색 패턴</h3>
+<div class="outline-text-3" id="text-org6bbf7cb">
 <p>
 찾을 패턴으로 와일드카드를 사용할 수도 있다.
 </p>
@@ -135,9 +135,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org34c2e68" class="outline-3">
-<h3 id="org34c2e68">대소문자 무시하기</h3>
-<div class="outline-text-3" id="text-org34c2e68">
+<div id="outline-container-org8e443df" class="outline-3">
+<h3 id="org8e443df">대소문자 무시하기</h3>
+<div class="outline-text-3" id="text-org8e443df">
 <p>
 기본적으로 이 도구는 대소문자를 가린다.
 만약 대소문자를 가리지 않으려면 <code>iname</code> 옵션을 사용할 수 있다.
@@ -148,9 +148,9 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-orge26d955" class="outline-3">
-<h3 id="orge26d955">검색 종류 지정하기</h3>
-<div class="outline-text-3" id="text-orge26d955">
+<div id="outline-container-org47c490c" class="outline-3">
+<h3 id="org47c490c">검색 종류 지정하기</h3>
+<div class="outline-text-3" id="text-org47c490c">
 <p>
 만약 특정한 종류만 검색하고 싶다면 <code>type</code> 옵션을 사용할 수 있다.
 </p>
@@ -168,9 +168,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orge31d43d" class="outline-3">
-<h3 id="orge31d43d">검색 내용으로 특정 처리하기(exec)</h3>
-<div class="outline-text-3" id="text-orge31d43d">
+<div id="outline-container-orga6b5627" class="outline-3">
+<h3 id="orga6b5627">검색 내용으로 특정 처리하기(exec)</h3>
+<div class="outline-text-3" id="text-orga6b5627">
 <p>
 <code>-exec</code> 옵션은 검색된 내용을 이용해 외부 도구를 실행시킬 수 있게 할 수 있다.
 </p>
