--- a/note/flutter.html
+++ b/note/flutter.html
@@ -1,6 +1,7 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
 <title>Flutter - Seorenn</title>
@@ -25,7 +26,6 @@
 <meta property="og:locale" content="ko_KR" />
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
@@ -72,10 +72,10 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org50488cb">문제 해결</a>
+<li><a href="#org43b369d">문제 해결</a>
 <ul>
-<li><a href="#orgbb43752">macOS에서 개발자 인증 문제</a></li>
-<li><a href="#org449a472">프레임워크 iOS 아키텍처 오류</a></li>
+<li><a href="#org9a893e8">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#org2846149">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
 </ul>
@@ -91,13 +91,13 @@ Flutter(플러터)는 Dart라는 한 가지 언어로 iOS, Android 등
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-org50488cb" class="outline-2">
-<h2 id="org50488cb">문제 해결</h2>
-<div class="outline-text-2" id="text-org50488cb">
+<div id="outline-container-org43b369d" class="outline-2">
+<h2 id="org43b369d">문제 해결</h2>
+<div class="outline-text-2" id="text-org43b369d">
 </div>
-<div id="outline-container-orgbb43752" class="outline-3">
-<h3 id="orgbb43752">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-orgbb43752">
+<div id="outline-container-org9a893e8" class="outline-3">
+<h3 id="org9a893e8">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-org9a893e8">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
@@ -130,9 +130,9 @@ Flutter "<code>idevice_id</code>" cannot be opened because the developer cannot 
 </p>
 </div>
 </div>
-<div id="outline-container-org449a472" class="outline-3">
-<h3 id="org449a472">프레임워크 iOS 아키텍처 오류</h3>
-<div class="outline-text-3" id="text-org449a472">
+<div id="outline-container-org2846149" class="outline-3">
+<h3 id="org2846149">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-org2846149">
 <p>
 <code>run</code> 커맨드로 실행 시 여러 iOS 플랫폼 용으로 빌드를 하다 보면
 이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
