--- a/note/homebrew.html
+++ b/note/homebrew.html
@@ -1,6 +1,7 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
 <title>Homebrew - Seorenn</title>
@@ -25,7 +26,6 @@
 <meta property="og:locale" content="ko_KR" />
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
@@ -72,22 +72,22 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org9debb23">기본 사용법</a>
+<li><a href="#orga66f5de">기본 사용법</a>
 <ul>
-<li><a href="#orga1648af">패키지 검색</a></li>
-<li><a href="#orgf1d9442">패키지 정보</a></li>
-<li><a href="#orga6e7a47">패키지 설치</a></li>
-<li><a href="#orgc1bb009">만료된 버전 확인</a></li>
-<li><a href="#orgf406dfc">패키지 업그레이드</a></li>
-<li><a href="#org0a15e05">구 버전 삭제하기</a></li>
-<li><a href="#org1cc2529">패키지 삭제(uninstall)</a></li>
-<li><a href="#org252781d">의사 양반(?)</a></li>
+<li><a href="#org9cfbf34">패키지 검색</a></li>
+<li><a href="#org6ea58ef">패키지 정보</a></li>
+<li><a href="#orgc80dd85">패키지 설치</a></li>
+<li><a href="#org634c4db">만료된 버전 확인</a></li>
+<li><a href="#org397355b">패키지 업그레이드</a></li>
+<li><a href="#orgcda3553">구 버전 삭제하기</a></li>
+<li><a href="#org902f42f">패키지 삭제(uninstall)</a></li>
+<li><a href="#orgeb25e89">의사 양반(?)</a></li>
 </ul>
 </li>
-<li><a href="#org9dad7de">구 버전 패키지 사용하기</a></li>
-<li><a href="#org68ac5c8">다중 버전을 제공하는 패키지의 경우</a></li>
-<li><a href="#orgd27d2fc">Cask</a></li>
-<li><a href="#org0044ea5">외부 링크</a></li>
+<li><a href="#org36369d8">구 버전 패키지 사용하기</a></li>
+<li><a href="#org1000cc8">다중 버전을 제공하는 패키지의 경우</a></li>
+<li><a href="#orgbf4ee8d">Cask</a></li>
+<li><a href="#orgf85c39a">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -98,31 +98,31 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 또한 root 사용자가 아니어도 사용할 수도 있도록 구조를 만들어 준다는 점도 특징이다.
 </p>
 
-<div id="outline-container-org9debb23" class="outline-2">
-<h2 id="org9debb23">기본 사용법</h2>
-<div class="outline-text-2" id="text-org9debb23">
+<div id="outline-container-orga66f5de" class="outline-2">
+<h2 id="orga66f5de">기본 사용법</h2>
+<div class="outline-text-2" id="text-orga66f5de">
 </div>
-<div id="outline-container-orga1648af" class="outline-3">
-<h3 id="orga1648af">패키지 검색</h3>
-<div class="outline-text-3" id="text-orga1648af">
+<div id="outline-container-org9cfbf34" class="outline-3">
+<h3 id="org9cfbf34">패키지 검색</h3>
+<div class="outline-text-3" id="text-org9cfbf34">
 <div class="org-src-container">
 <pre class="src src-bash">brew search KEYWORD
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgf1d9442" class="outline-3">
-<h3 id="orgf1d9442">패키지 정보</h3>
-<div class="outline-text-3" id="text-orgf1d9442">
+<div id="outline-container-org6ea58ef" class="outline-3">
+<h3 id="org6ea58ef">패키지 정보</h3>
+<div class="outline-text-3" id="text-org6ea58ef">
 <div class="org-src-container">
 <pre class="src src-bash">brew info PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orga6e7a47" class="outline-3">
-<h3 id="orga6e7a47">패키지 설치</h3>
-<div class="outline-text-3" id="text-orga6e7a47">
+<div id="outline-container-orgc80dd85" class="outline-3">
+<h3 id="orgc80dd85">패키지 설치</h3>
+<div class="outline-text-3" id="text-orgc80dd85">
 <div class="org-src-container">
 <pre class="src src-bash">brew install PACKAGE_NAME
 </pre>
@@ -133,9 +133,9 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc1bb009" class="outline-3">
-<h3 id="orgc1bb009">만료된 버전 확인</h3>
-<div class="outline-text-3" id="text-orgc1bb009">
+<div id="outline-container-org634c4db" class="outline-3">
+<h3 id="org634c4db">만료된 버전 확인</h3>
+<div class="outline-text-3" id="text-org634c4db">
 <p>
 설치된 패키지의 최신 버전이 존재하는지 확인하려면 <code>update</code> 후
 <code>outdated</code> 를 살펴보자.
@@ -147,9 +147,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-orgf406dfc" class="outline-3">
-<h3 id="orgf406dfc">패키지 업그레이드</h3>
-<div class="outline-text-3" id="text-orgf406dfc">
+<div id="outline-container-org397355b" class="outline-3">
+<h3 id="org397355b">패키지 업그레이드</h3>
+<div class="outline-text-3" id="text-org397355b">
 <div class="org-src-container">
 <pre class="src src-bash">brew upgrade PACKAGE_NAME
 </pre>
@@ -163,9 +163,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org0a15e05" class="outline-3">
-<h3 id="org0a15e05">구 버전 삭제하기</h3>
-<div class="outline-text-3" id="text-org0a15e05">
+<div id="outline-container-orgcda3553" class="outline-3">
+<h3 id="orgcda3553">구 버전 삭제하기</h3>
+<div class="outline-text-3" id="text-orgcda3553">
 <p>
 패키지를 업그레이드해도 구 버전은 그대로 남아 파일 시스템에 잔존한다.
 이를 청소하기 위해 <code>cleanup</code> 커맨드를 사용할 수 있다.
@@ -179,18 +179,18 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-org1cc2529" class="outline-3">
-<h3 id="org1cc2529">패키지 삭제(uninstall)</h3>
-<div class="outline-text-3" id="text-org1cc2529">
+<div id="outline-container-org902f42f" class="outline-3">
+<h3 id="org902f42f">패키지 삭제(uninstall)</h3>
+<div class="outline-text-3" id="text-org902f42f">
 <div class="org-src-container">
 <pre class="src src-bash">brew uninstall PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org252781d" class="outline-3">
-<h3 id="org252781d">의사 양반(?)</h3>
-<div class="outline-text-3" id="text-org252781d">
+<div id="outline-container-orgeb25e89" class="outline-3">
+<h3 id="orgeb25e89">의사 양반(?)</h3>
+<div class="outline-text-3" id="text-orgeb25e89">
 <div class="org-src-container">
 <pre class="src src-bash">brew doctor
 </pre>
@@ -201,9 +201,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org9dad7de" class="outline-2">
-<h2 id="org9dad7de">구 버전 패키지 사용하기</h2>
-<div class="outline-text-2" id="text-org9dad7de">
+<div id="outline-container-org36369d8" class="outline-2">
+<h2 id="org36369d8">구 버전 패키지 사용하기</h2>
+<div class="outline-text-2" id="text-org36369d8">
 <p>
 만약 <code>upgrade</code> 등으로 최신버전이 설치되었다면
 해당 패키지의 구 버전도 여전히 파일 시스템에 남아있다.
@@ -218,9 +218,9 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-org68ac5c8" class="outline-2">
-<h2 id="org68ac5c8">다중 버전을 제공하는 패키지의 경우</h2>
-<div class="outline-text-2" id="text-org68ac5c8">
+<div id="outline-container-org1000cc8" class="outline-2">
+<h2 id="org1000cc8">다중 버전을 제공하는 패키지의 경우</h2>
+<div class="outline-text-2" id="text-org1000cc8">
 <p>
 다중 버전의 패키지가 필요한 경우 우선 지원되는지 부터 확인해봐야 한다.
 예를 들어 node.js 의 경우 LTS 버전이 다양하게 제공되고 있다.
@@ -323,9 +323,9 @@ v10.x.x
 </p>
 </div>
 </div>
-<div id="outline-container-orgd27d2fc" class="outline-2">
-<h2 id="orgd27d2fc">Cask</h2>
-<div class="outline-text-2" id="text-orgd27d2fc">
+<div id="outline-container-orgbf4ee8d" class="outline-2">
+<h2 id="orgbf4ee8d">Cask</h2>
+<div class="outline-text-2" id="text-orgbf4ee8d">
 <p>
 cask는 <a href="macos.html">macOS</a> 응용 소프트웨어나
 다양한 리소스를 설치할 수 있게 도와주는 확장 도구다.
@@ -359,9 +359,9 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 </p>
 </div>
 </div>
-<div id="outline-container-org0044ea5" class="outline-2">
-<h2 id="org0044ea5">외부 링크</h2>
-<div class="outline-text-2" id="text-org0044ea5">
+<div id="outline-container-orgf85c39a" class="outline-2">
+<h2 id="orgf85c39a">외부 링크</h2>
+<div class="outline-text-2" id="text-orgf85c39a">
 <ul class="org-ul">
 <li><a target="_blank" href="https://brew.sh">🌏Homebrew 공식 홈페이지</a></li>
 </ul>
