--- a/note/javascript.html
+++ b/note/javascript.html
@@ -1,6 +1,7 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
 <title>Javascript - Seorenn</title>
@@ -25,7 +26,6 @@
 <meta property="og:locale" content="ko_KR" />
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
@@ -72,22 +72,22 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd34fc88">노트</a>
+<li><a href="#orgafb57f5">노트</a>
 <ul>
-<li><a href="#orgd7d000b">모듈(Module)</a></li>
-<li><a href="#org5e1d24b">스프레드(Spreads) 연산자</a></li>
-<li><a href="#org130243e">튜플 비슷한 문법</a></li>
+<li><a href="#org2f1d503">모듈(Module)</a></li>
+<li><a href="#org86fea0e">스프레드(Spreads) 연산자</a></li>
+<li><a href="#orgd3a12d5">튜플 비슷한 문법</a></li>
 </ul>
 </li>
-<li><a href="#orgd4a45d7">실전(?) 메모</a>
+<li><a href="#org45b5afd">실전(?) 메모</a>
 <ul>
-<li><a href="#org8d33ca1">요소 얻기</a></li>
-<li><a href="#orgaf9c9ac">특정 블록에 HTML 넣기</a></li>
-<li><a href="#org5259d7a">콘텐츠 높이 구하기</a></li>
-<li><a href="#orgb31fe4f">특정 태그 앞에 요소 넣기</a></li>
+<li><a href="#org54188c8">요소 얻기</a></li>
+<li><a href="#org059f737">특정 블록에 HTML 넣기</a></li>
+<li><a href="#orgb181b31">콘텐츠 높이 구하기</a></li>
+<li><a href="#org154885c">특정 태그 앞에 요소 넣기</a></li>
 </ul>
 </li>
-<li><a href="#orgd49520a">외부 링크</a></li>
+<li><a href="#org0b77228">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -105,13 +105,13 @@ gtag('config', 'UA-44534026-1');
 버전은 ES6를 기준으로 한다.
 </p>
 
-<div id="outline-container-orgd34fc88" class="outline-2">
-<h2 id="orgd34fc88">노트</h2>
-<div class="outline-text-2" id="text-orgd34fc88">
+<div id="outline-container-orgafb57f5" class="outline-2">
+<h2 id="orgafb57f5">노트</h2>
+<div class="outline-text-2" id="text-orgafb57f5">
 </div>
-<div id="outline-container-orgd7d000b" class="outline-3">
-<h3 id="orgd7d000b">모듈(Module)</h3>
-<div class="outline-text-3" id="text-orgd7d000b">
+<div id="outline-container-org2f1d503" class="outline-3">
+<h3 id="org2f1d503">모듈(Module)</h3>
+<div class="outline-text-3" id="text-org2f1d503">
 <p>
 일반적으로 모듈은 아래와 같은 형식으로 쓰인다.
 </p>
@@ -163,9 +163,9 @@ console.log(someValues.value2);
 </div>
 </div>
 </div>
-<div id="outline-container-org5e1d24b" class="outline-3">
-<h3 id="org5e1d24b">스프레드(Spreads) 연산자</h3>
-<div class="outline-text-3" id="text-org5e1d24b">
+<div id="outline-container-org86fea0e" class="outline-3">
+<h3 id="org86fea0e">스프레드(Spreads) 연산자</h3>
+<div class="outline-text-3" id="text-org86fea0e">
 <p>
 스프레드 연산자는 <code>...</code> 으로 표기되며
 이름처럼 펼치거나 확산한다라는 의미로 동작한다.
@@ -228,9 +228,9 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </p>
 </div>
 </div>
-<div id="outline-container-org130243e" class="outline-3">
-<h3 id="org130243e">튜플 비슷한 문법</h3>
-<div class="outline-text-3" id="text-org130243e">
+<div id="outline-container-orgd3a12d5" class="outline-3">
+<h3 id="orgd3a12d5">튜플 비슷한 문법</h3>
+<div class="outline-text-3" id="text-orgd3a12d5">
 <div class="org-src-container">
 <pre class="src src-javascript"><span style="color: #51afef;">let</span> [<span style="color: #dcaeea;">foo</span>, <span style="color: #dcaeea;">bar</span>] = [<span style="color: #da8548; font-weight: bold;">1</span>, <span style="color: #da8548; font-weight: bold;">2</span>]
 [foo, bar] = [bar, foo]
@@ -242,13 +242,13 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </div>
 </div>
 </div>
-<div id="outline-container-orgd4a45d7" class="outline-2">
-<h2 id="orgd4a45d7">실전(?) 메모</h2>
-<div class="outline-text-2" id="text-orgd4a45d7">
+<div id="outline-container-org45b5afd" class="outline-2">
+<h2 id="org45b5afd">실전(?) 메모</h2>
+<div class="outline-text-2" id="text-org45b5afd">
 </div>
-<div id="outline-container-org8d33ca1" class="outline-3">
-<h3 id="org8d33ca1">요소 얻기</h3>
-<div class="outline-text-3" id="text-org8d33ca1">
+<div id="outline-container-org54188c8" class="outline-3">
+<h3 id="org54188c8">요소 얻기</h3>
+<div class="outline-text-3" id="text-org54188c8">
 <div class="org-src-container">
 <pre class="src src-javascript">document.getElementById(<span style="color: #98be65;">'some-id'</span>)
 document.getElementsByClassName(<span style="color: #98be65;">'some-class'</span>)[<span style="color: #da8548; font-weight: bold;">0</span>]
@@ -260,9 +260,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-orgaf9c9ac" class="outline-3">
-<h3 id="orgaf9c9ac">특정 블록에 HTML 넣기</h3>
-<div class="outline-text-3" id="text-orgaf9c9ac">
+<div id="outline-container-org059f737" class="outline-3">
+<h3 id="org059f737">특정 블록에 HTML 넣기</h3>
+<div class="outline-text-3" id="text-org059f737">
 <p>
 아래는 some-id라는 아이디의 div 블록 내부 내용을 지정하는 예제다.
 </p>
@@ -272,9 +272,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </div>
 </div>
 </div>
-<div id="outline-container-org5259d7a" class="outline-3">
-<h3 id="org5259d7a">콘텐츠 높이 구하기</h3>
-<div class="outline-text-3" id="text-org5259d7a">
+<div id="outline-container-orgb181b31" class="outline-3">
+<h3 id="orgb181b31">콘텐츠 높이 구하기</h3>
+<div class="outline-text-3" id="text-orgb181b31">
 <p>
 웹 브라우저에 표시되는 내용의 높이(height)를 구하는 방법이다.
 </p>
@@ -294,9 +294,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-orgb31fe4f" class="outline-3">
-<h3 id="orgb31fe4f">특정 태그 앞에 요소 넣기</h3>
-<div class="outline-text-3" id="text-orgb31fe4f">
+<div id="outline-container-org154885c" class="outline-3">
+<h3 id="org154885c">특정 태그 앞에 요소 넣기</h3>
+<div class="outline-text-3" id="text-org154885c">
 <p>
 수동으로 노드를 만들어서 특정 태그 노드 앞에 붙이는 예제다.
 </p>
@@ -323,9 +323,9 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 </div>
 </div>
 </div>
-<div id="outline-container-orgd49520a" class="outline-2">
-<h2 id="orgd49520a">외부 링크</h2>
-<div class="outline-text-2" id="text-orgd49520a">
+<div id="outline-container-org0b77228" class="outline-2">
+<h2 id="org0b77228">외부 링크</h2>
+<div class="outline-text-2" id="text-org0b77228">
 <ul class="org-ul">
 <li><a target="_blank" href="https://ko.javascript.info/">🌏모던 JavaScript 튜토리얼</a></li>
 <li><a target="_blank" href="https://junhobaik.github.io/es2016-es2020/">🌏ECMAScript ES2016~ES2020 정리</a></li>
