--- a/note/motion.html
+++ b/note/motion.html
@@ -1,6 +1,7 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
 <title>Motion - Seorenn</title>
@@ -25,7 +26,6 @@
 <meta property="og:locale" content="ko_KR" />
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
@@ -72,15 +72,15 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org3933c23">단축키</a></li>
-<li><a href="#org2f36fa6">팁</a>
+<li><a href="#org8a51483">단축키</a></li>
+<li><a href="#orgf049069">팁</a>
 <ul>
-<li><a href="#org71f791e">효과 적용 시간 보장하기</a></li>
+<li><a href="#orgd46ac20">효과 적용 시간 보장하기</a></li>
 </ul>
 </li>
-<li><a href="#org48a0983">기타</a>
+<li><a href="#org8ce736f">기타</a>
 <ul>
-<li><a href="#org7c65c3c">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
+<li><a href="#org8a94a1b">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
 </ul>
 </li>
 </ul>
@@ -96,9 +96,9 @@ gtag('config', 'UA-44534026-1');
 그래서 혹자는 "<a href="fcpx.html">Final Cut Pro X</a>과 모션을 같이 써야 완전체다" 라고 말하기도 한다.
 </p>
 
-<div id="outline-container-org3933c23" class="outline-2">
-<h2 id="org3933c23">단축키</h2>
-<div class="outline-text-2" id="text-org3933c23">
+<div id="outline-container-org8a51483" class="outline-2">
+<h2 id="org8a51483">단축키</h2>
+<div class="outline-text-2" id="text-org8a51483">
 <dl class="org-dl">
 <dt><code>Command D</code></dt><dd>복제(Duplicate)</dd>
 <dt><code>Shift M</code></dt><dd>마커(Marker)</dd>
@@ -106,13 +106,13 @@ gtag('config', 'UA-44534026-1');
 </dl>
 </div>
 </div>
-<div id="outline-container-org2f36fa6" class="outline-2">
-<h2 id="org2f36fa6">팁</h2>
-<div class="outline-text-2" id="text-org2f36fa6">
+<div id="outline-container-orgf049069" class="outline-2">
+<h2 id="orgf049069">팁</h2>
+<div class="outline-text-2" id="text-orgf049069">
 </div>
-<div id="outline-container-org71f791e" class="outline-3">
-<h3 id="org71f791e">효과 적용 시간 보장하기</h3>
-<div class="outline-text-3" id="text-org71f791e">
+<div id="outline-container-orgd46ac20" class="outline-3">
+<h3 id="orgd46ac20">효과 적용 시간 보장하기</h3>
+<div class="outline-text-3" id="text-orgd46ac20">
 <p>
 타이틀 템플릿은 프로젝트 기본 설정과는 다르게 마음껏 늘여서 쓸 수도 있다.
 이럴 경우 애니메이션 등의 효과도 같이 늘어나게 되는데, 이 애니메이션 시간을 원래 프로젝트에서 만든 시간으로 보정할 수 있다.
@@ -130,13 +130,13 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org48a0983" class="outline-2">
-<h2 id="org48a0983">기타</h2>
-<div class="outline-text-2" id="text-org48a0983">
+<div id="outline-container-org8ce736f" class="outline-2">
+<h2 id="org8ce736f">기타</h2>
+<div class="outline-text-2" id="text-org8ce736f">
 </div>
-<div id="outline-container-org7c65c3c" class="outline-3">
-<h3 id="org7c65c3c">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
-<div class="outline-text-3" id="text-org7c65c3c">
+<div id="outline-container-org8a94a1b" class="outline-3">
+<h3 id="org8a94a1b">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
+<div class="outline-text-3" id="text-org8a94a1b">
 <p>
 아직 버그인지 모르겠지만, <a href="macos.html">macOS</a>를 한국어로 설정해서 사용하는 경우
 한글로 된 폰트가 폰트 목록에서 누락되는 경우가 있다.
