--- a/note/svg.html
+++ b/note/svg.html
@@ -1,6 +1,7 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
 <title>SVG - Seorenn</title>
@@ -25,7 +26,6 @@
 <meta property="og:locale" content="ko_KR" />
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
 <meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
@@ -81,9 +81,9 @@ SVG는 XML로 표현된 오픈 표준의 포맷이라는 큰 장점이 있어서
 벡터이기 때문에 면과 면을 채우는 색, 그리고 테두리 색 등으로  이미지를 구성한다.
 </p>
 
-<div id="outline-container-org5798ea5" class="outline-2">
-<h2 id="org5798ea5"><a href="macos.html">macOS</a>에서 SVG 파일을 PNG로 바꾸기</h2>
-<div class="outline-text-2" id="text-org5798ea5">
+<div id="outline-container-orga55a042" class="outline-2">
+<h2 id="orga55a042"><a href="macos.html">macOS</a>에서 SVG 파일을 PNG로 바꾸기</h2>
+<div class="outline-text-2" id="text-orga55a042">
 <p>
 <code>rsvg-convert</code> 라는 <a href="cli.html">CLI</a> 유틸리티로 변환이 가능하다.
 </p>
